# telegram-finbot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: ai_analysis.py  bot.py  main.py  parser.py
app/utils/: excel_exporter.py
